--- a/charts/mccp/templates/rbac/app_viewer_role.yaml
+++ b/charts/mccp/templates/rbac/app_viewer_role.yaml
@@ -4,8 +4,24 @@ kind: ClusterRole
 metadata:
   name: app-viewer-role
 rules:
-  - apiGroups: ["wego.weave.works", "helm.toolkit.fluxcd.io", "kustomize.toolkit.fluxcd.io", "notification.toolkit.fluxcd.io", "source.toolkit.fluxcd.io", "image.toolkit.fluxcd.io", "notification.toolkit.fluxcd.io"]
-    resources: ["apps", "helmreleases", "kustomizations", "alerts", "buckets", "gitrepositories", "helmcharts", "helmrepositories", "imagepolicies", "imagerepositories", "imageupdateautomations", "providers", "receivers"]
+  - apiGroups:
+      - wego.weave.works
+      - helm.toolkit.fluxcd.io
+      - kustomize.toolkit.fluxcd.io
+      - notification.toolkit.fluxcd.io
+      - source.toolkit.fluxcd.io
+      - image.toolkit.fluxcd.io
+      - notification.toolkit.fluxcd.io
+      # profiles
+      - weave.works
+      # capi
+      - cluster.x-k8s.io
+      - bootstrap.cluster.x-k8s.io
+      - controlplane.cluster.x-k8s.io
+      - infrastructure.cluster.x-k8s.io
+      # crds
+      - apiextensions.k8s.io
+    resources: ["*"]
     verbs:
       - get
       - list
