--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -4,6 +4,7 @@ on:
 name: label
 jobs:
   labelCheck:
+    name: Check that PR has a label for use in release notes
     runs-on: ubuntu-latest
     steps:
       - name: Pull request label check
@@ -11,4 +12,4 @@ jobs:
         with:
           mode: exactly
           count: 1
-          labels: "bug, enhancement, ui, test, null"
+          labels: "bug, enhancement, ui, test, exclude from release notes"
