--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -90,187 +90,9 @@ jobs:
 
     #     # We've finished submitting the coverage
     #     curl -k "https://coveralls.io/webhook?repo_token=$WGE_COVERALLS_TOKEN" -d "payload[build_num]=$GITHUB_RUN_NUMBER&payload[status]=done"
-
-  build-cluster-service:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Configure git for private modules
-      env:
-        GITHUB_BUILD_USERNAME: wge-build-bot
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.sha }}
-    - name: build
-      env:
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: |
-        docker push docker.io/weaveworks/weave-gitops-enterprise-clusters-service:$(./tools/image-tag)
-
-  build-event-writer:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Configure git for private modules
-      env:
-        GITHUB_BUILD_USERNAME: wge-build-bot
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.sha }}
-    - name: build
-      env:
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: |
-        docker push docker.io/weaveworks/weave-gitops-enterprise-event-writer:$(./tools/image-tag)
-
-  build-ui-server:
-    runs-on: ubuntu-latest
-    env:
-      YARN_CACHE_NAME: cache-yarn
-    steps:
-    - id: cache-paths
-      run: |
-        echo "::set-output name=dir::$(yarn cache dir)"
-        echo "::set-output name=go-build::$(go env GOCACHE)"
-        echo "::set-output name=go-mod::$(go env GOMODCACHE)"
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17.x
-    - name: Configure git for private modules
-      env:
-        GITHUB_BUILD_USERNAME: wge-build-bot
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.sha }}
-    - name: Go Build Cache
-      uses: actions/cache@v2
-      with:
-        path: |
-          ${{ steps.cache-paths.outputs.go-build }}
-          ${{ steps.cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-go-build-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-build-${{ env.GO_CACHE_NAME }}-
-    - name: Yarn Cache
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.cache-paths.outputs.dir }}
-        key: ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-
-    - name: build
-      env:
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/ui-server/.uptodate
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: |
-        docker push docker.io/weaveworks/weave-gitops-enterprise-ui-server:$(./tools/image-tag)
-
+  
   build:
-    runs-on: ubuntu-latest
-    env:
-      GO_CACHE_NAME: cache-go-modules
-    steps:
-    - id: cache-paths
-      run: |
-        echo "::set-output name=dir::$(yarn cache dir)"
-        echo "::set-output name=go-build::$(go env GOCACHE)"
-        echo "::set-output name=go-mod::$(go env GOMODCACHE)"
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17.x
-    - name: Configure git for private modules
-      env:
-        GITHUB_BUILD_USERNAME: wge-build-bot
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.sha }}
-    - name: Go Build Cache
-      uses: actions/cache@v2
-      with:
-        path: |
-          ${{ steps.cache-paths.outputs.go-build }}
-          ${{ steps.cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-go-build-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-build-${{ env.GO_CACHE_NAME }}-
-    - name: Build all the services
-      env:
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/gitops-repo-broker/.uptodate
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/wkp-agent/.uptodate
-    - name: Install Helm v3
-      uses: azure/setup-helm@v1
-      with:
-        version: v3.5.4
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-central-1
-    - name: Publish helm chart to s3
-      run: |
-        git fetch --tags --force
-        TAG=$(git describe --always --match "v*")
-        
-        CHART_VALUES_PATH=./charts/mccp/values.yaml
-        # Update the MCCP chart values.yaml file with the current image tag
-        make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
-
-        # Publish the MCCP Helm v3 chart
-        ./bin/publish-chart-to-s3.sh $TAG "charts-v3" ./charts/mccp    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: make push
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/reusable/build.yaml@${{ github.head_ref }}
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -392,7 +214,7 @@ jobs:
        
   smoke-tests:
     runs-on: ubuntu-latest
-    needs: [build, build-cluster-service, build-event-writer, build-ui-server]
+    needs: build
     timeout-minutes: 60
     env:
       GO_CACHE_NAME: cache-go-modules
@@ -495,7 +317,7 @@ jobs:
 
   acceptance-tests:
     runs-on: ubuntu-latest
-    needs: [lint, build, build-cluster-service, build-event-writer, build-ui-server, unit-tests, integration-tests, ui-integration-tests]
+    needs: [lint, build, unit-tests, integration-tests, ui-integration-tests]
     timeout-minutes: 90
     env:
       GO_CACHE_NAME: cache-go-modules
