--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -92,7 +92,7 @@ jobs:
     #     curl -k "https://coveralls.io/webhook?repo_token=$WGE_COVERALLS_TOKEN" -d "payload[build_num]=$GITHUB_RUN_NUMBER&payload[status]=done"
   
   build:
-    uses: weaveworks/weave-gitops-enterprise/.github/workflows/build.yaml@HEAD
+    uses: ./weaveworks/weave-gitops-enterprise/.github/workflows/build.yaml
 
   integration-tests:
     runs-on: ubuntu-latest
