--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,11 @@ name: "Build and push docker images and charts"
 
 on:
   workflow_call:
+    inputs:
+      helm-repo:
+        description: 'Which helm repo to push to'
+        required: true
+        type: string
     secrets:
       BUILD_BOT_PERSONAL_ACCESS_TOKEN: { required: true }
       WGE_DOCKER_IO_USER: { required: true }
@@ -13,6 +18,9 @@ on:
 env:
   GITHUB_BUILD_USERNAME: wge-build-bot
   GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+  GO_CACHE_NAME: cache-go-modules
+  YARN_CACHE_NAME: cache-yarn
+  HELM_REPO: ${{ inputs.helm-repo }}
 
 jobs:
   cluster-service:
@@ -42,9 +50,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Configure git for private modules
-      env:
-        GITHUB_BUILD_USERNAME: wge-build-bot
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
     - name: Checkout code
       uses: actions/checkout@v2
@@ -52,8 +57,6 @@ jobs:
         fetch-depth: 0
         ref: ${{ github.event.pull_request.head.sha }}
     - name: build
-      env:
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: |
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
     - name: Login to Docker Hub
@@ -68,8 +71,6 @@ jobs:
 
   ui-server:
     runs-on: ubuntu-latest
-    env:
-      YARN_CACHE_NAME: cache-yarn
     steps:
     - id: cache-paths
       run: |
@@ -81,9 +82,6 @@ jobs:
       with:
         go-version: 1.17.x
     - name: Configure git for private modules
-      env:
-        GITHUB_BUILD_USERNAME: wge-build-bot
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
     - name: Checkout code
       uses: actions/checkout@v2
@@ -108,7 +106,6 @@ jobs:
           ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-
     - name: build
       env:
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
       run: |
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/ui-server/.uptodate
@@ -124,8 +121,6 @@ jobs:
 
   gitops-broker-and-agent:
     runs-on: ubuntu-latest
-    env:
-      GO_CACHE_NAME: cache-go-modules
     steps:
     - id: cache-paths
       run: |
@@ -137,9 +132,6 @@ jobs:
       with:
         go-version: 1.17.x
     - name: Configure git for private modules
-      env:
-        GITHUB_BUILD_USERNAME: wge-build-bot
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
     - name: Checkout code
       uses: actions/checkout@v2
@@ -156,8 +148,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-build-${{ env.GO_CACHE_NAME }}-
     - name: Build all the services
-      env:
-        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: |
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/gitops-repo-broker/.uptodate
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/wkp-agent/.uptodate
