--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -93,6 +93,8 @@ jobs:
   
   build:
     uses: weaveworks/weave-gitops-enterprise/.github/workflows/build.yaml@build-optimizations
+    with:
+      helmrepo: "dev/charts-v3"
     secrets:
       BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       WGE_DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }}
