Fixes branch ref for new build workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ on:
 name: deploy
 jobs:
   build:
-    uses: weaveworks/weave-gitops-enterprise/.github/workflows/build.yaml@build-optimizations
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/build.yaml@main
     with:
       helmrepo: "charts-v3"
     secrets:
