--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -6,7 +6,7 @@ on:
 name: nightly
 jobs:
   build:
-    uses: weaveworks/weave-gitops-enterprise/.github/workflows/build.yaml@build-optimizations
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/build.yaml@main
     with:
       helmrepo: "nightly/charts-v3"
     secrets:
