--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -97,6 +97,7 @@ jobs:
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
+      TOTP_TOKEN: ${{ secrets.WGE_GITHUB_MFA_KEY }}
       DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
       DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       GITOPS_BIN_PATH: /tmp/gitops
@@ -159,11 +160,17 @@ jobs:
       run: |
         git config --global user.email "test-user@weave.works"
         git config --global user.name "test-user"
-        git config --global url.ssh://git@github.com/.insteadOf https://github.com/    
+        git config --global url.ssh://git@github.com/.insteadOf https://github.com/
+    - name: Download totp-cli from GH
+      run: |
+        wget https://github.com/yitsushi/totp-cli/releases/download/v1.1.17/totp-cli-v1.1.17-${{ matrix.os_name }}-amd64.tar.gz
+        tar -xf totp-cli-v1.1.17-${{ matrix.os_name }}-amd64.tar.gz
+        mv ./totp-cli /usr/local/bin
     - name: Get a gitops-binary
       uses: ./.github/actions/gitops-binary
       with:
         os: ${{ matrix.os }}
+        os_name: ${{ matrix.os_name }}
         path: ${{ env.GITOPS_BIN_PATH }}
     - name: Download pctl binary from GH
       run: |
