--- a/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
@@ -11,7 +11,7 @@ spec:
     generateName: "run-gitops-{{ .ObjectMeta.Name }}"
     spec:
       containers:
-        - image: ghcr.io/palemtnrider/wego-app:v0.5.0-rc2
+        - image: ghcr.io/palemtnrider/wego-app:v0.6.0
           name: gitops-install
           resources: {}
           volumeMounts:
