--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ on:
   workflow_call:
     inputs:
       helmrepo:
-        description: 'Which helm repo to push to'
+        description: "Which helm repo to push to"
         required: true
         type: string
     secrets:
@@ -32,167 +32,147 @@ jobs:
   cluster-service:
     runs-on: ubuntu-latest
     steps:
-    - name: Configure git for private modules
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Grab all tags from git
-      run: |
-        git fetch --tags -f
-    - name: build
-      env:
-        GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: |
-        docker push docker.io/weaveworks/weave-gitops-enterprise-clusters-service:$(./tools/image-tag)
+      - name: Configure git for private modules
+        run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Grab all tags from git
+        run: |
+          git fetch --tags -f
+      - name: set those vars
+        id: lookup-vars
+        run: |
+          echo "::set-output name=version::$(git describe --always --match "v*" | sed 's/^[^0-9]*//')"
+          echo "::set-output name=revision::$(git rev-parse HEAD)"
+          echo "::set-output name=NPM_GITHUB_TOKEN::${{ secrets.WGE_NPM_GITHUB_TOKEN }}"
+          echo "::set-output name=GITHUB_BUILD_TOKEN::${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}"
+          echo "::set-output name=now::$(date -u +"%Y-%m-%dT%H:%M:%SZ")"
+          echo "::set-output name=image_tag::$(./tools/image-tag)"
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          registry: docker.io
+          username: ${{ secrets.WGE_DOCKER_IO_USER }}
+          password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./cmd/clusters-service/Dockerfile
+          push: true
+          build-args: |
+            "version=${{ steps.lookup-vars.outputs.version }}"
+            "image_tag=${{ steps.lookup-vars.outputs.image_tag }}"
+            "revision=${{ steps.lookup-vars.outputs.revision }}"
+            "GITHUB_BUILD_TOKEN=${{ steps.lookup-vars.outputs.GITHUB_BUILD_TOKEN }}"
+            "NPM_GITHUB_TOKEN=${{ steps.lookup-vars.outputs.NPM_GITHUB_TOKEN }}"
+            "now=${{ steps.lookup-vars.outputs.now }}"
+          tags: weaveworks/weave-gitops-enterprise-clusters-service:${{ steps.lookup-vars.outputs.image_tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   event-writer:
     runs-on: ubuntu-latest
     steps:
-    - name: Configure git for private modules
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Grab all tags from git
-      run: |
-        git fetch --tags -f
-    - name: build
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: |
-        docker push docker.io/weaveworks/weave-gitops-enterprise-event-writer:$(./tools/image-tag)
-
-  ui-server:
-    runs-on: ubuntu-latest
-    steps:
-    - id: cache-paths
-      run: |
-        echo "::set-output name=dir::$(yarn cache dir)"
-        echo "::set-output name=go-build::$(go env GOCACHE)"
-        echo "::set-output name=go-mod::$(go env GOMODCACHE)"
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17.x
-    - name: Configure git for private modules
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Grab all tags from git
-      run: |
-        git fetch --tags -f
-    - name: Go Build Cache
-      uses: actions/cache@v2
-      with:
-        path: |
-          ${{ steps.cache-paths.outputs.go-build }}
-          ${{ steps.cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
-    - name: Yarn Cache
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.cache-paths.outputs.dir }}
-        key: ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-
-    - name: build
-      env:
-        GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/ui-server/.uptodate
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: |
-        docker push docker.io/weaveworks/weave-gitops-enterprise-ui-server:$(./tools/image-tag)
+      - name: Configure git for private modules
+        run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Grab all tags from git
+        run: |
+          git fetch --tags -f
+      - name: build
+        run: |
+          make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          registry: docker.io
+          username: ${{ secrets.WGE_DOCKER_IO_USER }}
+          password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
+      - name: Push images to docker registry
+        run: |
+          docker push docker.io/weaveworks/weave-gitops-enterprise-event-writer:$(./tools/image-tag)
 
   gitops-broker-and-agent:
     runs-on: ubuntu-latest
     steps:
-    - id: cache-paths
-      run: |
-        echo "::set-output name=dir::$(yarn cache dir)"
-        echo "::set-output name=go-build::$(go env GOCACHE)"
-        echo "::set-output name=go-mod::$(go env GOMODCACHE)"
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17.x
-    - name: Configure git for private modules
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Grab all tags from git
-      run: |
-        git fetch --tags -f
-    - name: Go Build Cache
-      uses: actions/cache@v2
-      with:
-        path: |
-          ${{ steps.cache-paths.outputs.go-build }}
-          ${{ steps.cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
-    - name: Build all the services
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/gitops-repo-broker/.uptodate
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/wkp-agent/.uptodate
-    - name: Install Helm v3
-      uses: azure/setup-helm@v1
-      with:
-        version: v3.5.4
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-central-1
-    - name: Publish helm chart to s3
-      run: |
-        git fetch --tags --force
-        TAG=$(git describe --always --match "v*")
+      - name: Stub
+        run: |
+          echo "Stub until we update corp to not require this task"
 
-        CHART_VALUES_PATH=./charts/mccp/values.yaml
-        # Update the MCCP chart values.yaml file with the current image tag
-        make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
+  ui-server:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Stub
+        run: |
+          echo "Stub until we update corp to not require this task"
 
-        # Publish the MCCP Helm v3 chart
-        ./bin/publish-chart-to-s3.sh $TAG $HELM_REPO ./charts/mccp
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: make push
+  gitops-agent:
+    runs-on: ubuntu-latest
+    steps:
+      - id: cache-paths
+        run: |
+          echo "::set-output name=dir::$(yarn cache dir)"
+          echo "::set-output name=go-build::$(go env GOCACHE)"
+          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.x
+      - name: Configure git for private modules
+        run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Grab all tags from git
+        run: |
+          git fetch --tags -f
+      - name: Go Build Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ${{ steps.cache-paths.outputs.go-build }}
+            ${{ steps.cache-paths.outputs.go-mod }}
+          key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
+      - name: Build the agent
+        run: |
+          make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/wkp-agent/.uptodate
+      - name: Install Helm v3
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.5.4
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+      - name: Publish helm chart to s3
+        run: |
+          git fetch --tags --force
+          TAG=$(git describe --always --match "v*")
+
+          CHART_VALUES_PATH=./charts/mccp/values.yaml
+          # Update the MCCP chart values.yaml file with the current image tag
+          make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
+
+          # Publish the MCCP Helm v3 chart
+          ./bin/publish-chart-to-s3.sh $TAG $HELM_REPO ./charts/mccp
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          registry: docker.io
+          username: ${{ secrets.WGE_DOCKER_IO_USER }}
+          password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
+      - name: Push images to docker registry
+        run: make push
