--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -9,6 +9,7 @@ fullnameOverride: ""
 images:
   eventWriter: docker.io/weaveworks/weave-gitops-enterprise-event-writer:v2.5.0
   clustersService: docker.io/weaveworks/weave-gitops-enterprise-clusters-service:v0.0.2
+  uiServer: docker.io/weaveworks/weave-gitops-enterprise-ui-server:v0.0.2
   clusterBootstrapController: docker.io/weaveworks/cluster-bootstrap-controller:v0.0.3
 
 serviceAccount:
